// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PerformanceComparisonRepository > accepts an explicit Peloton class identity as high-confidence provider evidence 1`] = `
{
  "baseline": {
    "activity_id": "00000000-0000-4000-8000-000000000010",
    "selection": "earliest_match_in_range",
  },
  "coverage": {
    "activities_with_missing_duration": 0,
    "canonical_activities": 1,
    "cycling_metrics_from_deduped_samples": 0,
    "environment_metrics_from_deduped_samples": 0,
    "performances_with_equivalence_evidence": 1,
    "performances_with_moving_duration": 0,
    "timezone_assumed_activities": 0,
  },
  "definitions": {
    "causality": "These are descriptive within-equivalence comparisons and do not establish that training or recovery caused a change.",
    "comparison": "Only performances sharing the returned explicit or strongly evidenced identity are included; similarity by sport, duration, or effort alone is not equivalence.",
    "deltas": "Every numeric delta is candidate minus baseline; null means one or both values are missing.",
    "moving_duration": "Moving duration is provider-reported raw evidence. Conflicting source values remain null and are not reconciled silently.",
    "normalized_power": "Fourth root of the mean fourth power of complete 30-second rolling average power from deduplicated samples.",
    "power_to_heart_rate_ratio": "Average power watts divided by average heart-rate bpm; null when either input is unavailable or heart rate is non-positive.",
    "strength_estimated_one_rep_max": "Epley: weight_kg × (1 + reps / 30), only for unflagged working sets with 1–12 repetitions.",
  },
  "equivalence": {
    "assumptions": [],
    "basis": "explicit",
    "confidence": "high",
    "key": {
      "kind": "provider_workout_id",
      "provider": "peloton",
      "value": "class-abc",
    },
    "method": "exact_provider_workout_identity",
  },
  "pagination": {
    "has_more": false,
    "limit": 10,
    "next_cursor": null,
  },
  "performances": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000010",
      "activity_source_evidence_truncated": false,
      "canonical_type": "cycling",
      "date": "2026-06-01",
      "delta_to_baseline": {
        "average_cadence_rpm": null,
        "average_heart_rate_bpm": null,
        "average_power_watts": null,
        "average_temperature_c": null,
        "climbing_attempts": null,
        "climbing_sends": null,
        "distance_meters": null,
        "duration_seconds": 0,
        "elevation_gain_meters": null,
        "moving_duration_seconds": null,
        "normalized_power_watts": null,
        "power_to_heart_rate_ratio": null,
        "strength_estimated_one_rep_max_kg": null,
        "strength_volume_kg_reps": null,
      },
      "duration_seconds": 1800,
      "equivalence_evidence": [
        {
          "evidence_type": "provider_raw_field",
          "field": "pelotonClassId",
          "provider": "peloton",
          "provider_type": "",
          "source_activity_id": "00000000-0000-4000-8000-000000000010",
          "source_record_id": null,
          "value": "class-abc",
        },
      ],
      "equivalence_evidence_count": 1,
      "equivalence_evidence_truncated": false,
      "is_baseline": true,
      "member_activity_id_count": 1,
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000010",
      ],
      "metrics": {
        "climbing": null,
        "cycling": {
          "average_cadence_rpm": null,
          "average_heart_rate_bpm": null,
          "average_power_watts": null,
          "distance_meters": null,
          "elevation_gain_meters": null,
          "max_heart_rate_bpm": null,
          "normalized_power_watts": null,
          "power_to_heart_rate_ratio": null,
          "sample_coverage": {
            "heart_rate_samples": null,
            "power_samples": null,
            "status": "not_available",
            "total_samples": null,
          },
        },
        "environment": {
          "average_temperature_c": null,
          "status": "not_available",
          "value_kind": "calculated_from_deduped_samples",
        },
        "strength": null,
      },
      "modality": "indoor",
      "moving_duration": {
        "evidence": [],
        "evidence_count": 0,
        "evidence_truncated": false,
        "seconds": null,
        "status": "not_available",
      },
      "name": "30 min Power Zone Endurance",
      "provenance": {
        "activity_deduplication": "fitness.v_activity",
        "sample_device_id_count": 0,
        "sample_device_ids": [],
        "sample_source_evidence_truncated": false,
        "sample_source_provider_count": 0,
        "sample_source_providers": [],
        "sensor_deduplication": "analytics.activity_summary_rows/activity_sensor_sample FINAL",
        "value_kind": "mixed",
      },
      "quality": {
        "comparable": true,
        "flags": [
          "cycling_sensor_summary_unavailable",
        ],
      },
      "route": {
        "activity_name": null,
        "evidence": "comparison_not_keyed_by_route",
        "provider": null,
        "provider_type": null,
        "status": "not_available",
      },
      "source_external_id_count": 1,
      "source_external_ids": [
        {
          "externalId": "workout-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000010",
          "providerId": "peloton",
        },
      ],
      "source_provider_count": 1,
      "source_providers": [
        "peloton",
      ],
      "started_at": "2026-06-01T17:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
  "range": {
    "end_date": "2026-07-31",
    "start_date": "2026-06-01",
    "timezone": "UTC",
  },
  "rejected_near_matches": {
    "items": [],
    "reason": "Fuzzy near matches are intentionally not searched because similarity does not establish performance equivalence.",
    "status": "not_evaluated",
  },
}
`;

exports[`PerformanceComparisonRepository > binds cursors to the reference and continues by keyset even when the cursor row is absent 1`] = `
{
  "baseline": {
    "activity_id": "00000000-0000-4000-8000-000000000010",
    "selection": "requested_reference",
  },
  "coverage": {
    "activities_with_missing_duration": 0,
    "canonical_activities": 1,
    "cycling_metrics_from_deduped_samples": 0,
    "environment_metrics_from_deduped_samples": 0,
    "performances_with_equivalence_evidence": 1,
    "performances_with_moving_duration": 0,
    "timezone_assumed_activities": 0,
  },
  "definitions": {
    "causality": "These are descriptive within-equivalence comparisons and do not establish that training or recovery caused a change.",
    "comparison": "Only performances sharing the returned explicit or strongly evidenced identity are included; similarity by sport, duration, or effort alone is not equivalence.",
    "deltas": "Every numeric delta is candidate minus baseline; null means one or both values are missing.",
    "moving_duration": "Moving duration is provider-reported raw evidence. Conflicting source values remain null and are not reconciled silently.",
    "normalized_power": "Fourth root of the mean fourth power of complete 30-second rolling average power from deduplicated samples.",
    "power_to_heart_rate_ratio": "Average power watts divided by average heart-rate bpm; null when either input is unavailable or heart rate is non-positive.",
    "strength_estimated_one_rep_max": "Epley: weight_kg × (1 + reps / 30), only for unflagged working sets with 1–12 repetitions.",
  },
  "equivalence": {
    "assumptions": [],
    "basis": "derived_from_reference",
    "confidence": "high",
    "key": {
      "kind": "provider_workout_id",
      "provider": "peloton",
      "value": "class-abc",
    },
    "method": "exact_provider_workout_identity",
  },
  "pagination": {
    "has_more": true,
    "limit": 1,
    "next_cursor": "eyJ2ZXJzaW9uIjoxLCJ1c2VySWQiOiIwMDAwMDAwMC0wMDAwLTQwMDAtODAwMC0wMDAwMDAwMDAwMDEiLCJzaGFwZSI6IjBiNWVmOWZhZjRjZTE4NDdmZDEzOTI1MDlhMDY2NmQ4ZWFmOGE1ODE2ODc5YmYyZDczYmM5Yjc0YTg5MTcwNmQiLCJzdGFydGVkQXQiOiIyMDI2LTA2LTAxVDE3OjAwOjAwLjAwMFoiLCJhY3Rpdml0eUlkIjoiMDAwMDAwMDAtMDAwMC00MDAwLTgwMDAtMDAwMDAwMDAwMDEwIn0",
  },
  "performances": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000010",
      "activity_source_evidence_truncated": false,
      "canonical_type": "cycling",
      "date": "2026-06-01",
      "delta_to_baseline": {
        "average_cadence_rpm": null,
        "average_heart_rate_bpm": null,
        "average_power_watts": null,
        "average_temperature_c": null,
        "climbing_attempts": null,
        "climbing_sends": null,
        "distance_meters": null,
        "duration_seconds": 0,
        "elevation_gain_meters": null,
        "moving_duration_seconds": null,
        "normalized_power_watts": null,
        "power_to_heart_rate_ratio": null,
        "strength_estimated_one_rep_max_kg": null,
        "strength_volume_kg_reps": null,
      },
      "duration_seconds": 1800,
      "equivalence_evidence": [
        {
          "evidence_type": "provider_raw_field",
          "field": "pelotonClassId",
          "provider": "peloton",
          "provider_type": "",
          "source_activity_id": "00000000-0000-4000-8000-000000000010",
          "source_record_id": null,
          "value": "class-abc",
        },
      ],
      "equivalence_evidence_count": 1,
      "equivalence_evidence_truncated": false,
      "is_baseline": true,
      "member_activity_id_count": 1,
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000010",
      ],
      "metrics": {
        "climbing": null,
        "cycling": {
          "average_cadence_rpm": null,
          "average_heart_rate_bpm": null,
          "average_power_watts": null,
          "distance_meters": null,
          "elevation_gain_meters": null,
          "max_heart_rate_bpm": null,
          "normalized_power_watts": null,
          "power_to_heart_rate_ratio": null,
          "sample_coverage": {
            "heart_rate_samples": null,
            "power_samples": null,
            "status": "not_available",
            "total_samples": null,
          },
        },
        "environment": {
          "average_temperature_c": null,
          "status": "not_available",
          "value_kind": "calculated_from_deduped_samples",
        },
        "strength": null,
      },
      "modality": "indoor",
      "moving_duration": {
        "evidence": [],
        "evidence_count": 0,
        "evidence_truncated": false,
        "seconds": null,
        "status": "not_available",
      },
      "name": "30 min Power Zone Endurance",
      "provenance": {
        "activity_deduplication": "fitness.v_activity",
        "sample_device_id_count": 0,
        "sample_device_ids": [],
        "sample_source_evidence_truncated": false,
        "sample_source_provider_count": 0,
        "sample_source_providers": [],
        "sensor_deduplication": "analytics.activity_summary_rows/activity_sensor_sample FINAL",
        "value_kind": "mixed",
      },
      "quality": {
        "comparable": true,
        "flags": [
          "cycling_sensor_summary_unavailable",
        ],
      },
      "route": {
        "activity_name": null,
        "evidence": "comparison_not_keyed_by_route",
        "provider": null,
        "provider_type": null,
        "status": "not_available",
      },
      "source_external_id_count": 1,
      "source_external_ids": [
        {
          "externalId": "workout-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000010",
          "providerId": "peloton",
        },
      ],
      "source_provider_count": 1,
      "source_providers": [
        "peloton",
      ],
      "started_at": "2026-06-01T17:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
  "range": {
    "end_date": "2026-07-31",
    "start_date": "2026-06-01",
    "timezone": "UTC",
  },
  "rejected_near_matches": {
    "items": [],
    "reason": "Fuzzy near matches are intentionally not searched because similarity does not establish performance equivalence.",
    "status": "not_evaluated",
  },
}
`;

exports[`PerformanceComparisonRepository > binds cursors to the reference and continues by keyset even when the cursor row is absent 2`] = `
{
  "baseline": {
    "activity_id": "00000000-0000-4000-8000-000000000010",
    "selection": "requested_reference",
  },
  "coverage": {
    "activities_with_missing_duration": 1,
    "canonical_activities": 1,
    "cycling_metrics_from_deduped_samples": 0,
    "environment_metrics_from_deduped_samples": 0,
    "performances_with_equivalence_evidence": 1,
    "performances_with_moving_duration": 0,
    "timezone_assumed_activities": 0,
  },
  "definitions": {
    "causality": "These are descriptive within-equivalence comparisons and do not establish that training or recovery caused a change.",
    "comparison": "Only performances sharing the returned explicit or strongly evidenced identity are included; similarity by sport, duration, or effort alone is not equivalence.",
    "deltas": "Every numeric delta is candidate minus baseline; null means one or both values are missing.",
    "moving_duration": "Moving duration is provider-reported raw evidence. Conflicting source values remain null and are not reconciled silently.",
    "normalized_power": "Fourth root of the mean fourth power of complete 30-second rolling average power from deduplicated samples.",
    "power_to_heart_rate_ratio": "Average power watts divided by average heart-rate bpm; null when either input is unavailable or heart rate is non-positive.",
    "strength_estimated_one_rep_max": "Epley: weight_kg × (1 + reps / 30), only for unflagged working sets with 1–12 repetitions.",
  },
  "equivalence": {
    "assumptions": [],
    "basis": "derived_from_reference",
    "confidence": "high",
    "key": {
      "kind": "provider_workout_id",
      "provider": "peloton",
      "value": "class-abc",
    },
    "method": "exact_provider_workout_identity",
  },
  "pagination": {
    "has_more": false,
    "limit": 1,
    "next_cursor": null,
  },
  "performances": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000020",
      "activity_source_evidence_truncated": false,
      "canonical_type": "cycling",
      "date": "2026-07-01",
      "delta_to_baseline": {
        "average_cadence_rpm": null,
        "average_heart_rate_bpm": null,
        "average_power_watts": null,
        "average_temperature_c": null,
        "climbing_attempts": null,
        "climbing_sends": null,
        "distance_meters": null,
        "duration_seconds": null,
        "elevation_gain_meters": null,
        "moving_duration_seconds": null,
        "normalized_power_watts": null,
        "power_to_heart_rate_ratio": null,
        "strength_estimated_one_rep_max_kg": null,
        "strength_volume_kg_reps": null,
      },
      "duration_seconds": null,
      "equivalence_evidence": [
        {
          "evidence_type": "provider_raw_field",
          "field": "pelotonClassId",
          "provider": "peloton",
          "provider_type": "",
          "source_activity_id": "00000000-0000-4000-8000-000000000020",
          "source_record_id": null,
          "value": "class-abc",
        },
      ],
      "equivalence_evidence_count": 1,
      "equivalence_evidence_truncated": false,
      "is_baseline": false,
      "member_activity_id_count": 1,
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000020",
      ],
      "metrics": {
        "climbing": null,
        "cycling": {
          "average_cadence_rpm": null,
          "average_heart_rate_bpm": null,
          "average_power_watts": null,
          "distance_meters": null,
          "elevation_gain_meters": null,
          "max_heart_rate_bpm": null,
          "normalized_power_watts": null,
          "power_to_heart_rate_ratio": null,
          "sample_coverage": {
            "heart_rate_samples": null,
            "power_samples": null,
            "status": "not_available",
            "total_samples": null,
          },
        },
        "environment": {
          "average_temperature_c": null,
          "status": "not_available",
          "value_kind": "calculated_from_deduped_samples",
        },
        "strength": null,
      },
      "modality": "indoor",
      "moving_duration": {
        "evidence": [],
        "evidence_count": 0,
        "evidence_truncated": false,
        "seconds": null,
        "status": "not_available",
      },
      "name": "30 min Power Zone Endurance",
      "provenance": {
        "activity_deduplication": "fitness.v_activity",
        "sample_device_id_count": 0,
        "sample_device_ids": [],
        "sample_source_evidence_truncated": false,
        "sample_source_provider_count": 0,
        "sample_source_providers": [],
        "sensor_deduplication": "analytics.activity_summary_rows/activity_sensor_sample FINAL",
        "value_kind": "mixed",
      },
      "quality": {
        "comparable": true,
        "flags": [
          "duration_unavailable",
          "cycling_sensor_summary_unavailable",
        ],
      },
      "route": {
        "activity_name": null,
        "evidence": "comparison_not_keyed_by_route",
        "provider": null,
        "provider_type": null,
        "status": "not_available",
      },
      "source_external_id_count": 1,
      "source_external_ids": [
        {
          "externalId": "workout-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000010",
          "providerId": "peloton",
        },
      ],
      "source_provider_count": 1,
      "source_providers": [
        "peloton",
      ],
      "started_at": "2026-07-01T17:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
  "range": {
    "end_date": "2026-07-31",
    "start_date": "2026-06-01",
    "timezone": "UTC",
  },
  "rejected_near_matches": {
    "items": [],
    "reason": "Fuzzy near matches are intentionally not searched because similarity does not establish performance equivalence.",
    "status": "not_evaluated",
  },
}
`;

exports[`PerformanceComparisonRepository > compares an exact climb identity without producing deltas from incomplete attempts 1`] = `
{
  "baseline": {
    "activity_id": "00000000-0000-4000-8000-000000000010",
    "selection": "earliest_match_in_range",
  },
  "coverage": {
    "activities_with_missing_duration": 0,
    "canonical_activities": 2,
    "cycling_metrics_from_deduped_samples": 0,
    "environment_metrics_from_deduped_samples": 0,
    "performances_with_equivalence_evidence": 2,
    "performances_with_moving_duration": 0,
    "timezone_assumed_activities": 0,
  },
  "definitions": {
    "causality": "These are descriptive within-equivalence comparisons and do not establish that training or recovery caused a change.",
    "comparison": "Only performances sharing the returned explicit or strongly evidenced identity are included; similarity by sport, duration, or effort alone is not equivalence.",
    "deltas": "Every numeric delta is candidate minus baseline; null means one or both values are missing.",
    "moving_duration": "Moving duration is provider-reported raw evidence. Conflicting source values remain null and are not reconciled silently.",
    "normalized_power": "Fourth root of the mean fourth power of complete 30-second rolling average power from deduplicated samples.",
    "power_to_heart_rate_ratio": "Average power watts divided by average heart-rate bpm; null when either input is unavailable or heart rate is non-positive.",
    "strength_estimated_one_rep_max": "Epley: weight_kg × (1 + reps / 30), only for unflagged working sets with 1–12 repetitions.",
  },
  "equivalence": {
    "assumptions": [],
    "basis": "explicit",
    "confidence": "high",
    "key": {
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "kind": "climb",
      "lead": null,
      "location_name": "The Gym",
      "route_name": "Blue Arete",
    },
    "method": "exact_climb_location_route_grade_identity",
  },
  "pagination": {
    "has_more": false,
    "limit": 10,
    "next_cursor": null,
  },
  "performances": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000010",
      "activity_source_evidence_truncated": false,
      "canonical_type": "climbing",
      "date": "2026-06-01",
      "delta_to_baseline": {
        "average_cadence_rpm": null,
        "average_heart_rate_bpm": null,
        "average_power_watts": null,
        "average_temperature_c": null,
        "climbing_attempts": null,
        "climbing_sends": null,
        "distance_meters": null,
        "duration_seconds": 0,
        "elevation_gain_meters": null,
        "moving_duration_seconds": null,
        "normalized_power_watts": null,
        "power_to_heart_rate_ratio": null,
        "strength_estimated_one_rep_max_kg": null,
        "strength_volume_kg_reps": null,
      },
      "duration_seconds": 1800,
      "equivalence_evidence": [
        {
          "evidence_type": "climbing_entry",
          "field": null,
          "provider": "kaya",
          "provider_type": null,
          "source_activity_id": "00000000-0000-4000-8000-000000000010",
          "source_record_id": "00000000-0000-4000-8000-000000000201",
          "value": "boulder:v_scale:V6:Blue Arete:The Gym:lead=null",
        },
      ],
      "equivalence_evidence_count": 1,
      "equivalence_evidence_truncated": false,
      "is_baseline": true,
      "member_activity_id_count": 1,
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000010",
      ],
      "metrics": {
        "climbing": {
          "attempts": null,
          "attempts_status": "unavailable",
          "entries": 1,
          "evidence": [
            {
              "attempt_count": null,
              "climb_type": "boulder",
              "grade": "V6",
              "grade_system": "v_scale",
              "lead": null,
              "location_name": "The Gym",
              "merged_duplicate": false,
              "route_name": "Blue Arete",
              "sent": null,
              "source_activity_count": 1,
              "source_activity_ids": [
                "00000000-0000-4000-8000-000000000010",
              ],
              "source_entry_count": 1,
              "source_entry_ids": [
                "00000000-0000-4000-8000-000000000201",
              ],
              "source_evidence_truncated": false,
              "source_provider_count": 1,
              "source_providers": [
                "kaya",
              ],
              "status": "included",
            },
          ],
          "evidence_count": 1,
          "evidence_truncated": false,
          "excluded_ambiguous_entries": 0,
          "observed_grades": [
            "v_scale:V6",
          ],
          "outcomes_status": "unavailable",
          "sends": null,
          "source_entries": 1,
        },
        "cycling": null,
        "environment": {
          "average_temperature_c": null,
          "status": "not_available",
          "value_kind": "calculated_from_deduped_samples",
        },
        "strength": null,
      },
      "modality": "indoor",
      "moving_duration": {
        "evidence": [],
        "evidence_count": 0,
        "evidence_truncated": false,
        "seconds": null,
        "status": "not_available",
      },
      "name": "Bouldering",
      "provenance": {
        "activity_deduplication": "fitness.v_activity",
        "sample_device_id_count": 0,
        "sample_device_ids": [],
        "sample_source_evidence_truncated": false,
        "sample_source_provider_count": 0,
        "sample_source_providers": [],
        "sensor_deduplication": "analytics.activity_summary_rows/activity_sensor_sample FINAL",
        "value_kind": "mixed",
      },
      "quality": {
        "comparable": true,
        "flags": [],
      },
      "route": {
        "activity_name": null,
        "evidence": "comparison_not_keyed_by_route",
        "provider": null,
        "provider_type": null,
        "status": "not_available",
      },
      "source_external_id_count": 1,
      "source_external_ids": [
        {
          "externalId": "workout-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000010",
          "providerId": "peloton",
        },
      ],
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "started_at": "2026-06-01T17:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
    {
      "activity_id": "00000000-0000-4000-8000-000000000020",
      "activity_source_evidence_truncated": false,
      "canonical_type": "climbing",
      "date": "2026-07-01",
      "delta_to_baseline": {
        "average_cadence_rpm": null,
        "average_heart_rate_bpm": null,
        "average_power_watts": null,
        "average_temperature_c": null,
        "climbing_attempts": null,
        "climbing_sends": null,
        "distance_meters": null,
        "duration_seconds": 1800,
        "elevation_gain_meters": null,
        "moving_duration_seconds": null,
        "normalized_power_watts": null,
        "power_to_heart_rate_ratio": null,
        "strength_estimated_one_rep_max_kg": null,
        "strength_volume_kg_reps": null,
      },
      "duration_seconds": 3600,
      "equivalence_evidence": [
        {
          "evidence_type": "climbing_entry",
          "field": null,
          "provider": "kaya",
          "provider_type": null,
          "source_activity_id": "00000000-0000-4000-8000-000000000020",
          "source_record_id": "00000000-0000-4000-8000-000000000202",
          "value": "boulder:v_scale:V6:Blue Arete:The Gym:lead=null",
        },
      ],
      "equivalence_evidence_count": 1,
      "equivalence_evidence_truncated": false,
      "is_baseline": false,
      "member_activity_id_count": 1,
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000020",
      ],
      "metrics": {
        "climbing": {
          "attempts": 2,
          "attempts_status": "complete",
          "entries": 1,
          "evidence": [
            {
              "attempt_count": 2,
              "climb_type": "boulder",
              "grade": "V6",
              "grade_system": "v_scale",
              "lead": null,
              "location_name": "The Gym",
              "merged_duplicate": false,
              "route_name": "Blue Arete",
              "sent": true,
              "source_activity_count": 1,
              "source_activity_ids": [
                "00000000-0000-4000-8000-000000000020",
              ],
              "source_entry_count": 1,
              "source_entry_ids": [
                "00000000-0000-4000-8000-000000000202",
              ],
              "source_evidence_truncated": false,
              "source_provider_count": 1,
              "source_providers": [
                "kaya",
              ],
              "status": "included",
            },
          ],
          "evidence_count": 1,
          "evidence_truncated": false,
          "excluded_ambiguous_entries": 0,
          "observed_grades": [
            "v_scale:V6",
          ],
          "outcomes_status": "complete",
          "sends": 1,
          "source_entries": 1,
        },
        "cycling": null,
        "environment": {
          "average_temperature_c": null,
          "status": "not_available",
          "value_kind": "calculated_from_deduped_samples",
        },
        "strength": null,
      },
      "modality": "indoor",
      "moving_duration": {
        "evidence": [],
        "evidence_count": 0,
        "evidence_truncated": false,
        "seconds": null,
        "status": "not_available",
      },
      "name": "Bouldering",
      "provenance": {
        "activity_deduplication": "fitness.v_activity",
        "sample_device_id_count": 0,
        "sample_device_ids": [],
        "sample_source_evidence_truncated": false,
        "sample_source_provider_count": 0,
        "sample_source_providers": [],
        "sensor_deduplication": "analytics.activity_summary_rows/activity_sensor_sample FINAL",
        "value_kind": "mixed",
      },
      "quality": {
        "comparable": true,
        "flags": [],
      },
      "route": {
        "activity_name": null,
        "evidence": "comparison_not_keyed_by_route",
        "provider": null,
        "provider_type": null,
        "status": "not_available",
      },
      "source_external_id_count": 1,
      "source_external_ids": [
        {
          "externalId": "workout-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000010",
          "providerId": "peloton",
        },
      ],
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "started_at": "2026-07-01T17:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
  "range": {
    "end_date": "2026-07-31",
    "start_date": "2026-06-01",
    "timezone": "UTC",
  },
  "rejected_near_matches": {
    "items": [],
    "reason": "Fuzzy near matches are intentionally not searched because similarity does not establish performance equivalence.",
    "status": "not_evaluated",
  },
}
`;

exports[`PerformanceComparisonRepository > derives a repeated provider workout identity and compares deduped cycling metrics 1`] = `
{
  "baseline": {
    "activity_id": "00000000-0000-4000-8000-000000000010",
    "selection": "requested_reference",
  },
  "coverage": {
    "activities_with_missing_duration": 0,
    "canonical_activities": 2,
    "cycling_metrics_from_deduped_samples": 2,
    "environment_metrics_from_deduped_samples": 2,
    "performances_with_equivalence_evidence": 2,
    "performances_with_moving_duration": 0,
    "timezone_assumed_activities": 0,
  },
  "definitions": {
    "causality": "These are descriptive within-equivalence comparisons and do not establish that training or recovery caused a change.",
    "comparison": "Only performances sharing the returned explicit or strongly evidenced identity are included; similarity by sport, duration, or effort alone is not equivalence.",
    "deltas": "Every numeric delta is candidate minus baseline; null means one or both values are missing.",
    "moving_duration": "Moving duration is provider-reported raw evidence. Conflicting source values remain null and are not reconciled silently.",
    "normalized_power": "Fourth root of the mean fourth power of complete 30-second rolling average power from deduplicated samples.",
    "power_to_heart_rate_ratio": "Average power watts divided by average heart-rate bpm; null when either input is unavailable or heart rate is non-positive.",
    "strength_estimated_one_rep_max": "Epley: weight_kg × (1 + reps / 30), only for unflagged working sets with 1–12 repetitions.",
  },
  "equivalence": {
    "assumptions": [],
    "basis": "derived_from_reference",
    "confidence": "high",
    "key": {
      "kind": "provider_workout_id",
      "provider": "peloton",
      "value": "class-abc",
    },
    "method": "exact_provider_workout_identity",
  },
  "pagination": {
    "has_more": false,
    "limit": 10,
    "next_cursor": null,
  },
  "performances": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000010",
      "activity_source_evidence_truncated": false,
      "canonical_type": "cycling",
      "date": "2026-06-01",
      "delta_to_baseline": {
        "average_cadence_rpm": 0,
        "average_heart_rate_bpm": 0,
        "average_power_watts": 0,
        "average_temperature_c": 0,
        "climbing_attempts": null,
        "climbing_sends": null,
        "distance_meters": 0,
        "duration_seconds": 0,
        "elevation_gain_meters": 0,
        "moving_duration_seconds": null,
        "normalized_power_watts": 0,
        "power_to_heart_rate_ratio": 0,
        "strength_estimated_one_rep_max_kg": null,
        "strength_volume_kg_reps": null,
      },
      "duration_seconds": 1800,
      "equivalence_evidence": [
        {
          "evidence_type": "provider_raw_field",
          "field": "pelotonClassId",
          "provider": "peloton",
          "provider_type": "",
          "source_activity_id": "00000000-0000-4000-8000-000000000010",
          "source_record_id": null,
          "value": "class-abc",
        },
      ],
      "equivalence_evidence_count": 1,
      "equivalence_evidence_truncated": false,
      "is_baseline": true,
      "member_activity_id_count": 1,
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000010",
      ],
      "metrics": {
        "climbing": null,
        "cycling": {
          "average_cadence_rpm": 88,
          "average_heart_rate_bpm": 145,
          "average_power_watts": 180,
          "distance_meters": 15000,
          "elevation_gain_meters": 0,
          "max_heart_rate_bpm": 165,
          "normalized_power_watts": 185,
          "power_to_heart_rate_ratio": 1.241,
          "sample_coverage": {
            "heart_rate_samples": 360,
            "power_samples": 360,
            "status": "available",
            "total_samples": 360,
          },
        },
        "environment": {
          "average_temperature_c": 20,
          "status": "available",
          "value_kind": "calculated_from_deduped_samples",
        },
        "strength": null,
      },
      "modality": "indoor",
      "moving_duration": {
        "evidence": [],
        "evidence_count": 0,
        "evidence_truncated": false,
        "seconds": null,
        "status": "not_available",
      },
      "name": "30 min Power Zone Endurance",
      "provenance": {
        "activity_deduplication": "fitness.v_activity",
        "sample_device_id_count": 1,
        "sample_device_ids": [
          "bike-1",
        ],
        "sample_source_evidence_truncated": false,
        "sample_source_provider_count": 1,
        "sample_source_providers": [
          "peloton",
        ],
        "sensor_deduplication": "analytics.activity_summary_rows/activity_sensor_sample FINAL",
        "value_kind": "mixed",
      },
      "quality": {
        "comparable": true,
        "flags": [],
      },
      "route": {
        "activity_name": null,
        "evidence": "comparison_not_keyed_by_route",
        "provider": null,
        "provider_type": null,
        "status": "not_available",
      },
      "source_external_id_count": 1,
      "source_external_ids": [
        {
          "externalId": "workout-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000010",
          "providerId": "peloton",
        },
      ],
      "source_provider_count": 1,
      "source_providers": [
        "peloton",
      ],
      "started_at": "2026-06-01T17:00:00.000Z",
      "timezone": {
        "analysis_timezone": "America/Los_Angeles",
        "assumed": false,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
    {
      "activity_id": "00000000-0000-4000-8000-000000000020",
      "activity_source_evidence_truncated": false,
      "canonical_type": "cycling",
      "date": "2026-07-01",
      "delta_to_baseline": {
        "average_cadence_rpm": 2,
        "average_heart_rate_bpm": -2,
        "average_power_watts": 15,
        "average_temperature_c": -2,
        "climbing_attempts": null,
        "climbing_sends": null,
        "distance_meters": 0,
        "duration_seconds": 0,
        "elevation_gain_meters": 0,
        "moving_duration_seconds": null,
        "normalized_power_watts": 15,
        "power_to_heart_rate_ratio": 0.123,
        "strength_estimated_one_rep_max_kg": null,
        "strength_volume_kg_reps": null,
      },
      "duration_seconds": 1800,
      "equivalence_evidence": [
        {
          "evidence_type": "provider_raw_field",
          "field": "pelotonClassId",
          "provider": "peloton",
          "provider_type": "",
          "source_activity_id": "00000000-0000-4000-8000-000000000020",
          "source_record_id": null,
          "value": "class-abc",
        },
      ],
      "equivalence_evidence_count": 1,
      "equivalence_evidence_truncated": false,
      "is_baseline": false,
      "member_activity_id_count": 1,
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000020",
      ],
      "metrics": {
        "climbing": null,
        "cycling": {
          "average_cadence_rpm": 90,
          "average_heart_rate_bpm": 143,
          "average_power_watts": 195,
          "distance_meters": 15000,
          "elevation_gain_meters": 0,
          "max_heart_rate_bpm": 163,
          "normalized_power_watts": 200,
          "power_to_heart_rate_ratio": 1.364,
          "sample_coverage": {
            "heart_rate_samples": 360,
            "power_samples": 360,
            "status": "available",
            "total_samples": 360,
          },
        },
        "environment": {
          "average_temperature_c": 18,
          "status": "available",
          "value_kind": "calculated_from_deduped_samples",
        },
        "strength": null,
      },
      "modality": "indoor",
      "moving_duration": {
        "evidence": [],
        "evidence_count": 0,
        "evidence_truncated": false,
        "seconds": null,
        "status": "not_available",
      },
      "name": "30 min Power Zone Endurance",
      "provenance": {
        "activity_deduplication": "fitness.v_activity",
        "sample_device_id_count": 1,
        "sample_device_ids": [
          "bike-1",
        ],
        "sample_source_evidence_truncated": false,
        "sample_source_provider_count": 1,
        "sample_source_providers": [
          "peloton",
        ],
        "sensor_deduplication": "analytics.activity_summary_rows/activity_sensor_sample FINAL",
        "value_kind": "mixed",
      },
      "quality": {
        "comparable": true,
        "flags": [],
      },
      "route": {
        "activity_name": null,
        "evidence": "comparison_not_keyed_by_route",
        "provider": null,
        "provider_type": null,
        "status": "not_available",
      },
      "source_external_id_count": 1,
      "source_external_ids": [
        {
          "externalId": "workout-2",
          "memberActivityId": "00000000-0000-4000-8000-000000000020",
          "providerId": "peloton",
        },
      ],
      "source_provider_count": 1,
      "source_providers": [
        "peloton",
      ],
      "started_at": "2026-07-01T17:00:00.000Z",
      "timezone": {
        "analysis_timezone": "America/Los_Angeles",
        "assumed": false,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
  "range": {
    "end_date": "2026-07-31",
    "start_date": "2026-06-01",
    "timezone": "America/Los_Angeles",
  },
  "rejected_near_matches": {
    "items": [],
    "reason": "Fuzzy near matches are intentionally not searched because similarity does not establish performance equivalence.",
    "status": "not_evaluated",
  },
}
`;

exports[`PerformanceComparisonRepository > supports the explicit 'activity name' equivalence branch 1`] = `
{
  "baseline": {
    "activity_id": "00000000-0000-4000-8000-000000000010",
    "selection": "earliest_match_in_range",
  },
  "coverage": {
    "activities_with_missing_duration": 0,
    "canonical_activities": 1,
    "cycling_metrics_from_deduped_samples": 0,
    "environment_metrics_from_deduped_samples": 0,
    "performances_with_equivalence_evidence": 1,
    "performances_with_moving_duration": 0,
    "timezone_assumed_activities": 0,
  },
  "definitions": {
    "causality": "These are descriptive within-equivalence comparisons and do not establish that training or recovery caused a change.",
    "comparison": "Only performances sharing the returned explicit or strongly evidenced identity are included; similarity by sport, duration, or effort alone is not equivalence.",
    "deltas": "Every numeric delta is candidate minus baseline; null means one or both values are missing.",
    "moving_duration": "Moving duration is provider-reported raw evidence. Conflicting source values remain null and are not reconciled silently.",
    "normalized_power": "Fourth root of the mean fourth power of complete 30-second rolling average power from deduplicated samples.",
    "power_to_heart_rate_ratio": "Average power watts divided by average heart-rate bpm; null when either input is unavailable or heart rate is non-positive.",
    "strength_estimated_one_rep_max": "Epley: weight_kg × (1 + reps / 30), only for unflagged working sets with 1–12 repetitions.",
  },
  "equivalence": {
    "assumptions": [
      "The caller asserted that activities with this exact normalized name and canonical type are equivalent.",
    ],
    "basis": "explicit",
    "confidence": "user_asserted",
    "key": {
      "canonical_type": "cycling",
      "kind": "activity_name",
      "value": "30 min Power Zone Endurance",
    },
    "method": "exact_normalized_activity_name",
  },
  "pagination": {
    "has_more": false,
    "limit": 10,
    "next_cursor": null,
  },
  "performances": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000010",
      "activity_source_evidence_truncated": false,
      "canonical_type": "cycling",
      "date": "2026-06-01",
      "delta_to_baseline": {
        "average_cadence_rpm": null,
        "average_heart_rate_bpm": null,
        "average_power_watts": null,
        "average_temperature_c": null,
        "climbing_attempts": null,
        "climbing_sends": null,
        "distance_meters": null,
        "duration_seconds": 0,
        "elevation_gain_meters": null,
        "moving_duration_seconds": null,
        "normalized_power_watts": null,
        "power_to_heart_rate_ratio": null,
        "strength_estimated_one_rep_max_kg": null,
        "strength_volume_kg_reps": null,
      },
      "duration_seconds": 1800,
      "equivalence_evidence": [
        {
          "evidence_type": "canonical_activity_name",
          "field": "fitness.v_activity.name",
          "provider": null,
          "provider_type": null,
          "source_activity_id": "00000000-0000-4000-8000-000000000010",
          "source_record_id": null,
          "value": "30 min Power Zone Endurance",
        },
      ],
      "equivalence_evidence_count": 1,
      "equivalence_evidence_truncated": false,
      "is_baseline": true,
      "member_activity_id_count": 1,
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000010",
      ],
      "metrics": {
        "climbing": null,
        "cycling": {
          "average_cadence_rpm": null,
          "average_heart_rate_bpm": null,
          "average_power_watts": null,
          "distance_meters": null,
          "elevation_gain_meters": null,
          "max_heart_rate_bpm": null,
          "normalized_power_watts": null,
          "power_to_heart_rate_ratio": null,
          "sample_coverage": {
            "heart_rate_samples": null,
            "power_samples": null,
            "status": "not_available",
            "total_samples": null,
          },
        },
        "environment": {
          "average_temperature_c": null,
          "status": "not_available",
          "value_kind": "calculated_from_deduped_samples",
        },
        "strength": null,
      },
      "modality": "indoor",
      "moving_duration": {
        "evidence": [],
        "evidence_count": 0,
        "evidence_truncated": false,
        "seconds": null,
        "status": "not_available",
      },
      "name": "30 min Power Zone Endurance",
      "provenance": {
        "activity_deduplication": "fitness.v_activity",
        "sample_device_id_count": 0,
        "sample_device_ids": [],
        "sample_source_evidence_truncated": false,
        "sample_source_provider_count": 0,
        "sample_source_providers": [],
        "sensor_deduplication": "analytics.activity_summary_rows/activity_sensor_sample FINAL",
        "value_kind": "mixed",
      },
      "quality": {
        "comparable": true,
        "flags": [
          "cycling_sensor_summary_unavailable",
        ],
      },
      "route": {
        "activity_name": null,
        "evidence": "comparison_not_keyed_by_route",
        "provider": null,
        "provider_type": null,
        "status": "not_available",
      },
      "source_external_id_count": 1,
      "source_external_ids": [
        {
          "externalId": "workout-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000010",
          "providerId": "peloton",
        },
      ],
      "source_provider_count": 1,
      "source_providers": [
        "peloton",
      ],
      "started_at": "2026-06-01T17:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
  "range": {
    "end_date": "2026-07-31",
    "start_date": "2026-06-01",
    "timezone": "UTC",
  },
  "rejected_near_matches": {
    "items": [],
    "reason": "Fuzzy near matches are intentionally not searched because similarity does not establish performance equivalence.",
    "status": "not_evaluated",
  },
}
`;

exports[`PerformanceComparisonRepository > supports the explicit 'cycling route' equivalence branch 1`] = `
{
  "baseline": {
    "activity_id": "00000000-0000-4000-8000-000000000010",
    "selection": "earliest_match_in_range",
  },
  "coverage": {
    "activities_with_missing_duration": 0,
    "canonical_activities": 1,
    "cycling_metrics_from_deduped_samples": 0,
    "environment_metrics_from_deduped_samples": 0,
    "performances_with_equivalence_evidence": 1,
    "performances_with_moving_duration": 0,
    "timezone_assumed_activities": 0,
  },
  "definitions": {
    "causality": "These are descriptive within-equivalence comparisons and do not establish that training or recovery caused a change.",
    "comparison": "Only performances sharing the returned explicit or strongly evidenced identity are included; similarity by sport, duration, or effort alone is not equivalence.",
    "deltas": "Every numeric delta is candidate minus baseline; null means one or both values are missing.",
    "moving_duration": "Moving duration is provider-reported raw evidence. Conflicting source values remain null and are not reconciled silently.",
    "normalized_power": "Fourth root of the mean fourth power of complete 30-second rolling average power from deduplicated samples.",
    "power_to_heart_rate_ratio": "Average power watts divided by average heart-rate bpm; null when either input is unavailable or heart rate is non-positive.",
    "strength_estimated_one_rep_max": "Epley: weight_kg × (1 + reps / 30), only for unflagged working sets with 1–12 repetitions.",
  },
  "equivalence": {
    "assumptions": [
      "The caller asserted that this provider-scoped activity name and provider type denote equivalent performances.",
    ],
    "basis": "explicit",
    "confidence": "user_asserted",
    "key": {
      "activity_name": "Morning ride",
      "kind": "cycling_route",
      "provider": "strava",
      "provider_type": "outdoor_ride",
    },
    "method": "caller_asserted_cycling_route_name_provider_type",
  },
  "pagination": {
    "has_more": false,
    "limit": 10,
    "next_cursor": null,
  },
  "performances": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000010",
      "activity_source_evidence_truncated": false,
      "canonical_type": "cycling",
      "date": "2026-06-01",
      "delta_to_baseline": {
        "average_cadence_rpm": null,
        "average_heart_rate_bpm": null,
        "average_power_watts": null,
        "average_temperature_c": null,
        "climbing_attempts": null,
        "climbing_sends": null,
        "distance_meters": null,
        "duration_seconds": 0,
        "elevation_gain_meters": null,
        "moving_duration_seconds": null,
        "normalized_power_watts": null,
        "power_to_heart_rate_ratio": null,
        "strength_estimated_one_rep_max_kg": null,
        "strength_volume_kg_reps": null,
      },
      "duration_seconds": 1800,
      "equivalence_evidence": [
        {
          "evidence_type": "cycling_route_name_provider_type",
          "field": "fitness.activity.name + fitness.activity.provider_type",
          "provider": "strava",
          "provider_type": "outdoor_ride",
          "source_activity_id": "00000000-0000-4000-8000-000000000010",
          "source_record_id": null,
          "value": "Morning ride",
        },
      ],
      "equivalence_evidence_count": 1,
      "equivalence_evidence_truncated": false,
      "is_baseline": true,
      "member_activity_id_count": 1,
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000010",
      ],
      "metrics": {
        "climbing": null,
        "cycling": {
          "average_cadence_rpm": null,
          "average_heart_rate_bpm": null,
          "average_power_watts": null,
          "distance_meters": null,
          "elevation_gain_meters": null,
          "max_heart_rate_bpm": null,
          "normalized_power_watts": null,
          "power_to_heart_rate_ratio": null,
          "sample_coverage": {
            "heart_rate_samples": null,
            "power_samples": null,
            "status": "not_available",
            "total_samples": null,
          },
        },
        "environment": {
          "average_temperature_c": null,
          "status": "not_available",
          "value_kind": "calculated_from_deduped_samples",
        },
        "strength": null,
      },
      "modality": "indoor",
      "moving_duration": {
        "evidence": [],
        "evidence_count": 0,
        "evidence_truncated": false,
        "seconds": null,
        "status": "not_available",
      },
      "name": "30 min Power Zone Endurance",
      "provenance": {
        "activity_deduplication": "fitness.v_activity",
        "sample_device_id_count": 0,
        "sample_device_ids": [],
        "sample_source_evidence_truncated": false,
        "sample_source_provider_count": 0,
        "sample_source_providers": [],
        "sensor_deduplication": "analytics.activity_summary_rows/activity_sensor_sample FINAL",
        "value_kind": "mixed",
      },
      "quality": {
        "comparable": true,
        "flags": [
          "cycling_sensor_summary_unavailable",
        ],
      },
      "route": {
        "activity_name": "30 min Power Zone Endurance",
        "evidence": "caller_asserted_activity_name_provider_type",
        "provider": "strava",
        "provider_type": "outdoor_ride",
        "status": "caller_asserted",
      },
      "source_external_id_count": 1,
      "source_external_ids": [
        {
          "externalId": "workout-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000010",
          "providerId": "peloton",
        },
      ],
      "source_provider_count": 1,
      "source_providers": [
        "strava",
      ],
      "started_at": "2026-06-01T17:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
  "range": {
    "end_date": "2026-07-31",
    "start_date": "2026-06-01",
    "timezone": "UTC",
  },
  "rejected_near_matches": {
    "items": [],
    "reason": "Fuzzy near matches are intentionally not searched because similarity does not establish performance equivalence.",
    "status": "not_evaluated",
  },
}
`;

exports[`PerformanceComparisonRepository > supports the explicit 'standardized test' equivalence branch 1`] = `
{
  "baseline": {
    "activity_id": "00000000-0000-4000-8000-000000000010",
    "selection": "earliest_match_in_range",
  },
  "coverage": {
    "activities_with_missing_duration": 0,
    "canonical_activities": 1,
    "cycling_metrics_from_deduped_samples": 0,
    "environment_metrics_from_deduped_samples": 0,
    "performances_with_equivalence_evidence": 1,
    "performances_with_moving_duration": 0,
    "timezone_assumed_activities": 0,
  },
  "definitions": {
    "causality": "These are descriptive within-equivalence comparisons and do not establish that training or recovery caused a change.",
    "comparison": "Only performances sharing the returned explicit or strongly evidenced identity are included; similarity by sport, duration, or effort alone is not equivalence.",
    "deltas": "Every numeric delta is candidate minus baseline; null means one or both values are missing.",
    "moving_duration": "Moving duration is provider-reported raw evidence. Conflicting source values remain null and are not reconciled silently.",
    "normalized_power": "Fourth root of the mean fourth power of complete 30-second rolling average power from deduplicated samples.",
    "power_to_heart_rate_ratio": "Average power watts divided by average heart-rate bpm; null when either input is unavailable or heart rate is non-positive.",
    "strength_estimated_one_rep_max": "Epley: weight_kg × (1 + reps / 30), only for unflagged working sets with 1–12 repetitions.",
  },
  "equivalence": {
    "assumptions": [
      "The caller asserted that this provider-scoped activity name and provider type denote equivalent performances.",
    ],
    "basis": "explicit",
    "confidence": "user_asserted",
    "key": {
      "activity_name": "20 minute FTP test",
      "kind": "standardized_test",
      "provider": "wahoo",
      "provider_type": "cycling_test",
    },
    "method": "caller_asserted_standardized_test_name_provider_type",
  },
  "pagination": {
    "has_more": false,
    "limit": 10,
    "next_cursor": null,
  },
  "performances": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000010",
      "activity_source_evidence_truncated": false,
      "canonical_type": "cycling",
      "date": "2026-06-01",
      "delta_to_baseline": {
        "average_cadence_rpm": null,
        "average_heart_rate_bpm": null,
        "average_power_watts": null,
        "average_temperature_c": null,
        "climbing_attempts": null,
        "climbing_sends": null,
        "distance_meters": null,
        "duration_seconds": 0,
        "elevation_gain_meters": null,
        "moving_duration_seconds": null,
        "normalized_power_watts": null,
        "power_to_heart_rate_ratio": null,
        "strength_estimated_one_rep_max_kg": null,
        "strength_volume_kg_reps": null,
      },
      "duration_seconds": 1800,
      "equivalence_evidence": [
        {
          "evidence_type": "standardized_test_name_provider_type",
          "field": "fitness.activity.name + fitness.activity.provider_type",
          "provider": "wahoo",
          "provider_type": "cycling_test",
          "source_activity_id": "00000000-0000-4000-8000-000000000010",
          "source_record_id": null,
          "value": "20 minute FTP test",
        },
      ],
      "equivalence_evidence_count": 1,
      "equivalence_evidence_truncated": false,
      "is_baseline": true,
      "member_activity_id_count": 1,
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000010",
      ],
      "metrics": {
        "climbing": null,
        "cycling": {
          "average_cadence_rpm": null,
          "average_heart_rate_bpm": null,
          "average_power_watts": null,
          "distance_meters": null,
          "elevation_gain_meters": null,
          "max_heart_rate_bpm": null,
          "normalized_power_watts": null,
          "power_to_heart_rate_ratio": null,
          "sample_coverage": {
            "heart_rate_samples": null,
            "power_samples": null,
            "status": "not_available",
            "total_samples": null,
          },
        },
        "environment": {
          "average_temperature_c": null,
          "status": "not_available",
          "value_kind": "calculated_from_deduped_samples",
        },
        "strength": null,
      },
      "modality": "indoor",
      "moving_duration": {
        "evidence": [],
        "evidence_count": 0,
        "evidence_truncated": false,
        "seconds": null,
        "status": "not_available",
      },
      "name": "30 min Power Zone Endurance",
      "provenance": {
        "activity_deduplication": "fitness.v_activity",
        "sample_device_id_count": 0,
        "sample_device_ids": [],
        "sample_source_evidence_truncated": false,
        "sample_source_provider_count": 0,
        "sample_source_providers": [],
        "sensor_deduplication": "analytics.activity_summary_rows/activity_sensor_sample FINAL",
        "value_kind": "mixed",
      },
      "quality": {
        "comparable": true,
        "flags": [
          "cycling_sensor_summary_unavailable",
        ],
      },
      "route": {
        "activity_name": null,
        "evidence": "comparison_not_keyed_by_route",
        "provider": null,
        "provider_type": null,
        "status": "not_available",
      },
      "source_external_id_count": 1,
      "source_external_ids": [
        {
          "externalId": "workout-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000010",
          "providerId": "peloton",
        },
      ],
      "source_provider_count": 1,
      "source_providers": [
        "wahoo",
      ],
      "started_at": "2026-06-01T17:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
  "range": {
    "end_date": "2026-07-31",
    "start_date": "2026-06-01",
    "timezone": "UTC",
  },
  "rejected_near_matches": {
    "items": [],
    "reason": "Fuzzy near matches are intentionally not searched because similarity does not establish performance equivalence.",
    "status": "not_evaluated",
  },
}
`;

exports[`PerformanceComparisonRepository > uses an explicit normalized strength exercise identity and excludes suspicious sets 1`] = `
{
  "baseline": {
    "activity_id": "00000000-0000-4000-8000-000000000010",
    "selection": "earliest_match_in_range",
  },
  "coverage": {
    "activities_with_missing_duration": 0,
    "canonical_activities": 2,
    "cycling_metrics_from_deduped_samples": 0,
    "environment_metrics_from_deduped_samples": 0,
    "performances_with_equivalence_evidence": 2,
    "performances_with_moving_duration": 0,
    "timezone_assumed_activities": 0,
  },
  "definitions": {
    "causality": "These are descriptive within-equivalence comparisons and do not establish that training or recovery caused a change.",
    "comparison": "Only performances sharing the returned explicit or strongly evidenced identity are included; similarity by sport, duration, or effort alone is not equivalence.",
    "deltas": "Every numeric delta is candidate minus baseline; null means one or both values are missing.",
    "moving_duration": "Moving duration is provider-reported raw evidence. Conflicting source values remain null and are not reconciled silently.",
    "normalized_power": "Fourth root of the mean fourth power of complete 30-second rolling average power from deduplicated samples.",
    "power_to_heart_rate_ratio": "Average power watts divided by average heart-rate bpm; null when either input is unavailable or heart rate is non-positive.",
    "strength_estimated_one_rep_max": "Epley: weight_kg × (1 + reps / 30), only for unflagged working sets with 1–12 repetitions.",
  },
  "equivalence": {
    "assumptions": [],
    "basis": "explicit",
    "confidence": "high",
    "key": {
      "exercise_id": "00000000-0000-4000-8000-000000000030",
      "kind": "strength_exercise_id",
    },
    "method": "exact_normalized_strength_exercise_identity",
  },
  "pagination": {
    "has_more": false,
    "limit": 10,
    "next_cursor": null,
  },
  "performances": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000010",
      "activity_source_evidence_truncated": false,
      "canonical_type": "strength",
      "date": "2026-06-01",
      "delta_to_baseline": {
        "average_cadence_rpm": null,
        "average_heart_rate_bpm": null,
        "average_power_watts": null,
        "average_temperature_c": null,
        "climbing_attempts": null,
        "climbing_sends": null,
        "distance_meters": null,
        "duration_seconds": 0,
        "elevation_gain_meters": null,
        "moving_duration_seconds": null,
        "normalized_power_watts": null,
        "power_to_heart_rate_ratio": null,
        "strength_estimated_one_rep_max_kg": 0,
        "strength_volume_kg_reps": 0,
      },
      "duration_seconds": 1800,
      "equivalence_evidence": [
        {
          "evidence_type": "strength_set",
          "field": "exercise_id",
          "provider": "hevy",
          "provider_type": null,
          "source_activity_id": "00000000-0000-4000-8000-000000000010",
          "source_record_id": "00000000-0000-4000-8000-000000000101",
          "value": "00000000-0000-4000-8000-000000000030",
        },
      ],
      "equivalence_evidence_count": 1,
      "equivalence_evidence_truncated": false,
      "is_baseline": true,
      "member_activity_id_count": 1,
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000010",
      ],
      "metrics": {
        "climbing": null,
        "cycling": null,
        "environment": {
          "average_temperature_c": null,
          "status": "not_available",
          "value_kind": "calculated_from_deduped_samples",
        },
        "strength": {
          "best_estimated_one_rep_max_kg": 116.67,
          "estimated_one_rep_max_status": "complete",
          "excluded_sets": 0,
          "missing_volume_sets": 0,
          "sets": 1,
          "source_sets": 1,
          "suspicious_sets": 0,
          "valid_volume_kg_reps": 500,
          "valid_volume_sets": 1,
          "volume_status": "complete",
          "working_sets": 1,
        },
      },
      "modality": "indoor",
      "moving_duration": {
        "evidence": [],
        "evidence_count": 0,
        "evidence_truncated": false,
        "seconds": null,
        "status": "not_available",
      },
      "name": "Bench",
      "provenance": {
        "activity_deduplication": "fitness.v_activity",
        "sample_device_id_count": 0,
        "sample_device_ids": [],
        "sample_source_evidence_truncated": false,
        "sample_source_provider_count": 0,
        "sample_source_providers": [],
        "sensor_deduplication": "analytics.activity_summary_rows/activity_sensor_sample FINAL",
        "value_kind": "mixed",
      },
      "quality": {
        "comparable": true,
        "flags": [],
      },
      "route": {
        "activity_name": null,
        "evidence": "comparison_not_keyed_by_route",
        "provider": null,
        "provider_type": null,
        "status": "not_available",
      },
      "source_external_id_count": 1,
      "source_external_ids": [
        {
          "externalId": "workout-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000010",
          "providerId": "peloton",
        },
      ],
      "source_provider_count": 1,
      "source_providers": [
        "peloton",
      ],
      "started_at": "2026-06-01T17:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
    {
      "activity_id": "00000000-0000-4000-8000-000000000020",
      "activity_source_evidence_truncated": false,
      "canonical_type": "strength",
      "date": "2026-07-01",
      "delta_to_baseline": {
        "average_cadence_rpm": null,
        "average_heart_rate_bpm": null,
        "average_power_watts": null,
        "average_temperature_c": null,
        "climbing_attempts": null,
        "climbing_sends": null,
        "distance_meters": null,
        "duration_seconds": 1800,
        "elevation_gain_meters": null,
        "moving_duration_seconds": null,
        "normalized_power_watts": null,
        "power_to_heart_rate_ratio": null,
        "strength_estimated_one_rep_max_kg": null,
        "strength_volume_kg_reps": null,
      },
      "duration_seconds": 3600,
      "equivalence_evidence": [
        {
          "evidence_type": "strength_set",
          "field": "exercise_id",
          "provider": "hevy",
          "provider_type": null,
          "source_activity_id": "00000000-0000-4000-8000-000000000020",
          "source_record_id": "00000000-0000-4000-8000-000000000102",
          "value": "00000000-0000-4000-8000-000000000030",
        },
        {
          "evidence_type": "strength_set",
          "field": "exercise_id",
          "provider": "hevy",
          "provider_type": null,
          "source_activity_id": "00000000-0000-4000-8000-000000000020",
          "source_record_id": "00000000-0000-4000-8000-000000000103",
          "value": "00000000-0000-4000-8000-000000000030",
        },
      ],
      "equivalence_evidence_count": 2,
      "equivalence_evidence_truncated": false,
      "is_baseline": false,
      "member_activity_id_count": 1,
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000010",
      ],
      "metrics": {
        "climbing": null,
        "cycling": null,
        "environment": {
          "average_temperature_c": null,
          "status": "not_available",
          "value_kind": "calculated_from_deduped_samples",
        },
        "strength": {
          "best_estimated_one_rep_max_kg": 128.33,
          "estimated_one_rep_max_status": "partial",
          "excluded_sets": 1,
          "missing_volume_sets": 0,
          "sets": 2,
          "source_sets": 2,
          "suspicious_sets": 1,
          "valid_volume_kg_reps": 550,
          "valid_volume_sets": 1,
          "volume_status": "partial",
          "working_sets": 2,
        },
      },
      "modality": "indoor",
      "moving_duration": {
        "evidence": [],
        "evidence_count": 0,
        "evidence_truncated": false,
        "seconds": null,
        "status": "not_available",
      },
      "name": "Bench",
      "provenance": {
        "activity_deduplication": "fitness.v_activity",
        "sample_device_id_count": 0,
        "sample_device_ids": [],
        "sample_source_evidence_truncated": false,
        "sample_source_provider_count": 0,
        "sample_source_providers": [],
        "sensor_deduplication": "analytics.activity_summary_rows/activity_sensor_sample FINAL",
        "value_kind": "mixed",
      },
      "quality": {
        "comparable": true,
        "flags": [
          "contains_suspicious_strength_sets_excluded_from_metrics",
          "strength_volume_coverage_partial",
          "strength_estimated_one_rep_max_coverage_partial",
        ],
      },
      "route": {
        "activity_name": null,
        "evidence": "comparison_not_keyed_by_route",
        "provider": null,
        "provider_type": null,
        "status": "not_available",
      },
      "source_external_id_count": 1,
      "source_external_ids": [
        {
          "externalId": "workout-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000010",
          "providerId": "peloton",
        },
      ],
      "source_provider_count": 1,
      "source_providers": [
        "peloton",
      ],
      "started_at": "2026-07-01T17:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
  "range": {
    "end_date": "2026-07-31",
    "start_date": "2026-06-01",
    "timezone": "UTC",
  },
  "rejected_near_matches": {
    "items": [],
    "reason": "Fuzzy near matches are intentionally not searched because similarity does not establish performance equivalence.",
    "status": "not_evaluated",
  },
}
`;
